--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,3 +8,10 @@ BACK_PORT=6390
 
 HUGCHAT_LOGIN="example@gmail.com"
 HUGCHAT_PASS="example"
+
+MINIO_ROOT_USER="example"
+MINIO_ROOT_PASSWORD="example"
+
+S3_ENDPOINT="http://minio:9000"
+S3_ACCESS_KEY="example"
+S3_SECRET_KEY="example"
