--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -43,10 +43,14 @@ services:
       LC_ALL: en_US.UTF-8
       HUGCHAT_LOGIN: ${HUGCHAT_LOGIN}
       HUGCHAT_PASS: ${HUGCHAT_PASS}
+      S3_ENDPOINT: ${S3_ENDPOINT}
+      S3_ACCESS_KEY: ${S3_ACCESS_KEY}
+      S3_SECRET_KEY: ${S3_SECRET_KEY}
     networks:
       - mynetwork
     volumes:
       - data-volume:/app/data
+      - chroma_data:/app/chroma
 
 
   streamlit:
@@ -70,9 +74,27 @@ services:
     volumes:
       - data-volume:/app/data
 
+  minio:
+      image: minio/minio
+      container_name: minio
+      environment:
+        MINIO_ROOT_USER: ${MINIO_ROOT_USER}     # Установите значения в файле .env
+        MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}  # Установите значения в файле .env
+      ports:
+        - "9190:9000"  # Порт для доступа к S3 API
+        - "9191:9191"  # Порт для доступа к MinIO Console
+      volumes:
+        - minio_data:/data
+      command: server /data --console-address ":9191"
+      networks:
+        - mynetwork
+
 volumes:
   postgres_data:
   data-volume:
+  minio_data:
+  chroma_data:
+
 
 networks:
   mynetwork:
