--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,13 +3,16 @@ FROM python:3.10-slim
 
 # Установка необходимых зависимостей
 RUN apt-get update && apt-get install -y \
-    locales && \
-    locale-gen en_US.UTF-8
+    locales \
+    && echo "en_US.UTF-8 UTF-8" > /etc/locale.gen \
+    && locale-gen en_US.UTF-8 \
+    && update-locale LANG=en_US.UTF-8
 
-# Установка переменных окружения
-ENV LANG=en_US.UTF-8 \
-    LANGUAGE=en_US:en \
-    LC_ALL=en_US.UTF-8
+
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
+
 
 # Set the working directory in the container
 WORKDIR /app
@@ -22,14 +25,13 @@ RUN apt-get install -y \
     gcc \
     g++ 
 
-# Обновляем pip и устанавливаем зависимости
+
+# Устанавливаем зависимости, указанные в requirements.txt
 RUN pip install --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
-# Копируем все файлы в рабочую директорию
 COPY . .
 
-# Порт приложения из аргументов
 ARG BACK_PORT
 ENV BACK_PORT=${BACK_PORT}
 
