--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,5 @@ MINIO_ROOT_PASSWORD="example"
 S3_ENDPOINT="http://minio:9000"
 S3_ACCESS_KEY="example"
 S3_SECRET_KEY="example"
+
+JWT_SECRET="example"
