--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -46,6 +46,7 @@ services:
       S3_ENDPOINT: ${S3_ENDPOINT}
       S3_ACCESS_KEY: ${S3_ACCESS_KEY}
       S3_SECRET_KEY: ${S3_SECRET_KEY}
+      JWT_SECRET: ${JWT_SECRET}
     networks:
       - mynetwork
     volumes:
