--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -41,8 +41,8 @@ services:
       LANG: en_US.UTF-8
       LANGUAGE: en_US:en
       LC_ALL: en_US.UTF-8
-      HUGCHAT_LOGIN: ${HUGCHAT_LOGIN}
-      HUGCHAT_PASS: ${HUGCHAT_PASS}
+      HF_TOKEN: ${HF_TOKEN}
+      MODEL_NAME: ${MODEL_NAME}
       S3_ENDPOINT: ${S3_ENDPOINT}
       S3_ACCESS_KEY: ${S3_ACCESS_KEY}
       S3_SECRET_KEY: ${S3_SECRET_KEY}
